--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>Document</title>
   </head>
   <body>
-    
+    <div class="container">
+      <div class="clock">
+        <div style="--clr: #ff0022; --h: 74px" class="hand" id="hour"><i></i></div>
+        <div style="--clr: #2c00db; --h: 84px" class="hand" id="min"><i></i></div>
+        <div style="--clr: #fff; --h: 94px" class="hand" id="sec"><i></i></div>
+
+        <span style="--i: 1"><b>1</b></span>
+        <span style="--i: 2"><b>2</b></span>
+        <span style="--i: 3"><b>3</b></span>
+        <span style="--i: 4"><b>4</b></span>
+        <span style="--i: 5"><b>5</b></span>
+        <span style="--i: 6"><b>6</b></span>
+        <span style="--i: 7"><b>7</b></span>
+        <span style="--i: 8"><b>8</b></span>
+        <span style="--i: 9"><b>9</b></span>
+        <span style="--i: 10"><b>10</b></span>
+        <span style="--i: 11"><b>11</b></span>
+        <span style="--i: 12"><b>12</b></span>
+      </div>
+    </div>
     <script src="./app.js"></script>
   </body>
 </html>
